--- a/apps/docs/app/(docs)/guides/mcp/page.mdx
+++ b/apps/docs/app/(docs)/guides/mcp/page.mdx
@@ -1,14 +1,10 @@
 # MCP Server
 
-The Axiom MCP (Model Context Protocol) server enables AI assistants like Claude Code and Cursor to access accurate component metadata, design tokens, and icons from the Axiom Design System.
-
-## What is MCP?
-
-[Model Context Protocol (MCP)](https://modelcontextprotocol.io) is an open protocol by Anthropic that allows AI assistants to securely connect to external data sources and tools. The Axiom MCP server provides AI coding assistants with real-time access to:
+The Axiom [Model Context Protocol (MCP)](https://modelcontextprotocol.io) server enables AI assistants like Claude Code and Cursor to access the Axiom Design System through real-time access to:
 
 - Component documentation and props
 - Design tokens for colors, spacing, typography, and more
-- Icon search capabilities (Optimizely staff only)
+- Icon search capabilities
 - Setup guides and best practices
 
 ## Installation
@@ -43,7 +39,7 @@ Add to your Cursor MCP configuration:
 }
 ```
 
-### Global Installation (Optional)
+### Global installation (optional)
 
 For faster startup times, you can install the package globally:
 
@@ -65,35 +61,37 @@ Then update your configuration to use the global installation:
 
 ## Usage
 
+### Natural language queries
+
 Once configured, you can ask your AI assistant natural language questions about Axiom:
 
-### Component Discovery
+#### Component Discovery
 
 - "What components are available in Axiom?"
 - "Show me how to use the Badge component"
 - "Find navigation components"
 - "Create a form with Input and Button components"
 
-### Component Details
+#### Component Details
 
 - "What props does the DataTable component accept?"
 - "Show me examples of using the Alert component"
 - "How do I use the Tabs component?"
 
-### Design Tokens
+#### Design Tokens
 
 - "What color tokens are available?"
 - "Convert this Figma color #4F576E to an Axiom token"
 - "What spacing values can I use?"
 - "Show me font size tokens"
 
-### Icon Search (Optimizely Staff Only)
+#### Icon Search
 
 - "Search for message icons"
 - "Find arrow icons"
 - "Show user-related icons"
 
-### Setup Guides
+#### Setup Guides
 
 - "Show me the getting started guide"
 - "How do I configure CSS imports?"
@@ -101,25 +99,23 @@ Once configured, you can ask your AI assistant natural language questions about 
 
 ## Available Tools
 
-The MCP server provides the following tools:
-
-### Component Tools
+### Component tools
 
 - **`list_components`** - List all available Axiom components
 - **`get_component`** - Get detailed information about a specific component
 - **`search_components`** - Search for components by name or description
 
-### Design Token Tools
+### Design token tools
 
 - **`get_tokens`** - Get all design token mappings (colors, spacing, typography, etc.)
 
-### Icon Tools (Optimizely Staff Only)
+### Icon tools
 
 - **`search_icons`** - Search for icons from the @optimizely/axiom-icons package
 
 ## Features
 
-### Accurate Component Metadata
+### Component metadata
 
 The MCP server provides up-to-date component information extracted directly from the `@optiaxiom/react` package, including:
 
@@ -129,7 +125,13 @@ The MCP server provides up-to-date component information extracted directly from
 - Code examples with screenshots
 - Versioning information
 
-### Design Token Conversion
+The AI assistant will automatically:
+
+- Use correct component names (validates against Figma/external sources)
+- Apply proper default props (Axiom components may differ from standard HTML/CSS)
+- Follow Axiom best practices (e.g., using `DataTable` instead of `Table` for data display)
+
+### Design token conversion
 
 Convert Figma design values to Axiom semantic tokens:
 
@@ -137,39 +139,15 @@ Convert Figma design values to Axiom semantic tokens:
 - Pixel values → spacing, size tokens
 - Font specifications → typography tokens
 
-### Icon Discovery
+The AI assistant will use semantic tokens instead of hardcoded values.
+
+### Icon discovery
 
 Search through 385+ licensed Font Awesome Pro icons by keyword or category. The search intelligently matches icon names (e.g., searching "message" finds `IconMessages`, `IconMessageBot`, `IconMessageLines`).
 
-### Important Notes
-
-The AI assistant will automatically:
-
-- Use correct component names (validates against Figma/external sources)
-- Apply proper default props (Axiom components may differ from standard HTML/CSS)
-- Follow Axiom best practices (e.g., using `DataTable` instead of `Table` for data display)
-- Use semantic tokens instead of hardcoded values
-
-## Troubleshooting
-
-### MCP Server Not Responding
-
-1. Restart your AI assistant (Claude Code or Cursor)
-2. Check that the MCP configuration file is valid JSON
-3. Verify the package is accessible: `npx @optiaxiom/mcp --version`
-
-### Icons Not Available
-
-Icon search is only available to Optimizely staff with access to the `@optimizely/axiom-icons` private package. Third-party developers should use alternative icon libraries.
-
-### Outdated Component Information
-
-The MCP server serves pre-generated metadata. To get the latest component information:
-
-1. Update `@optiaxiom/mcp` to the latest version
-2. Restart your AI assistant
-
 ## Resources
+
+### Additional links
 
 - [MCP Specification](https://modelcontextprotocol.io/specification)
 - [Axiom Design System](https://optimizely-axiom.github.io/optiaxiom/)
