fix build script

--- a/apps/docs/app/(docs)/guides/mcp/page.mdx
+++ b/apps/docs/app/(docs)/guides/mcp/page.mdx
@@ -53,7 +53,7 @@ Then update your configuration to use the global installation:
 {
   "servers": {
     "axiom": {
-      "command": "@optiaxiom/mcp"
+      "command": "axiom-mcp"
     }
   }
 }
