include references to MCP in docs

--- a/apps/docs/app/(docs)/guides/page.mdx
+++ b/apps/docs/app/(docs)/guides/page.mdx
@@ -48,4 +48,4 @@ export function MyComponent() {
 
 ### What to read next
 
-<Cards items={["Components", "Styling", "Icons"]} />
+<Cards items={["Components", "Styling", "Icons", "MCP"]} />
