add Group component and deprecate Flex

--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -151,6 +151,10 @@ Make sure to use `AlertDialog` or `Dialog` in controlled mode since there is no 
 
 ## Changelog
 
+### 1.6.0
+
+- Deprecated component in favor of [Menu](../menu/)
+
 ### 0.1.0
 
 - Added component
