--- a/apps/docs/app/(docs)/components/page.mdx
+++ b/apps/docs/app/(docs)/components/page.mdx
@@ -56,7 +56,7 @@ Button.displayName = "@optiaxiom/docs/Button";
 
 ### Related
 
-<Cards items={["Flex", "Grid", "Text"]} />
+<Cards items={["Grid", "Group", "Text"]} />
 
 ## Props
 
