--- a/apps/docs/app/(docs)/components/alert-dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/alert-dialog/page.mdx
@@ -1,5 +1,5 @@
-import { Cards, Demo, Links, PropsTable } from "@/components";
-import { Badge, Flex, Kbd } from "@optiaxiom/react";
+import { Cards, Demo, KeyboardTable, Links, PropsTable } from "@/components";
+import { Badge, Kbd } from "@optiaxiom/react";
 
 # AlertDialog
 
@@ -139,10 +139,18 @@ We can also completely change the trigger by using `asChild` and passing our own
 
 ### Keyboard interactions
 
-| Key                                                                        | Description                                                |
-| :------------------------------------------------------------------------- | :--------------------------------------------------------- |
-| <Flex flexDirection="row" gap="8"><Kbd>Space</Kbd> <Kbd>Enter</Kbd></Flex> | When focus is on `AlertDialogTrigger`, opens the dialog.   |
-| <Kbd>Esc</Kbd>                                                             | Closes the dialog and moves focus to `AlertDialogTrigger`. |
+<KeyboardTable
+  interactions={[
+    {
+      keys: ["Space", "Enter"],
+      description: "When focus is on `AlertDialogTrigger`, opens the dialog.",
+    },
+    {
+      keys: "Esc",
+      description: "Closes the dialog and moves focus to `AlertDialogTrigger`.",
+    },
+  ]}
+/>
 
 ## Changelog
 
