add mcp banner to every component page

--- a/apps/docs/app/(docs)/guides/page.mdx
+++ b/apps/docs/app/(docs)/guides/page.mdx
@@ -1,7 +1,12 @@
 import { Cards } from "@/components";
 import { Steps } from "nextra/components";
+import { Alert, Link, Text } from "@optiaxiom/react";
 
 # Getting Started
+
+<Alert intent="information" mt="16">
+  Want to skip the docs? Try our [MCP Server](/guides/mcp/)
+</Alert>
 
 ## Installation
 
