document font-size changing with input size

--- a/apps/docs/app/(docs)/components/input/page.mdx
+++ b/apps/docs/app/(docs)/components/input/page.mdx
@@ -45,7 +45,7 @@ Use the `required` prop on the Field component to mark an input as required. Thi
 
 ### Sizes
 
-Use the `size` prop to control the size of the input field.
+Use the `size` prop to control the size of the input field. The `xl` size uses a larger font size for the input value and placeholder.
 
 <Demo component="input/size-usage" />
 
